--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,11 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
+/backend/config/production.json
 /.pnp
 .pnp.js
+.vscode
 
 # testing
 /coverage
