--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "connect-mongodb-session": "^3.1.1",
-    "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.2",
+    "axios": "^0.25.0",
+    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-51947a14b-20220113",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
