--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^3.3.7",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
-    "mongoose": "^6.1.6"
+    "mongoose": "^6.1.6",
+    "nodemon": "^2.0.19"
   },
   "devDependencies": {
-    "eslint": "^8.6.0",
-    "nodemon": "^2.0.15"
+    "eslint": "^8.6.0"
   }
 }
